# ClearTissue

./: .gitignore  README.md  pyproject.toml
configs/: 32b.yaml
docs/: activity_diagram.puml  class_diagram.puml  pipeline_diagram.puml  tissue_uml.drawio
notebooks/: exploratory_nb.py
scripts/: analyse.py  analyse_spinal_sections.py  atlas_register.py  load_template.py  load_tissue.py  load_zarr.py  metric_analysis.py  nifty_conversion.py  postprocess_atlas.py  preprocess_data.py  process_untwist.py
scripts/debug/: adapters.py  animation.py  animation_atlas.py  animation_chat.py  animation_optimized.py  atlas.py  atlas_register.py  blender.py  brainglobe_registration.py  inspect_bainglobe.py  inspect_untwist.py  process_untwist.py  untwist_debug.py  zarr_file.py
scripts/old/: analyse_spinal_sections.py  filter_data.py  get_spinal_centerline.py  get_spinal_sections.py  spinal_cord_10_axial_cuts_2000x2000_density_grid.py
scripts/service/: convert_step.py  load_zarr.py  run.py
src/clearbrain/: __init__.py  density.py  io.py
src/clearbrain/adapters/: ClearIO.py  DataConverter.py  DataDownloader.py  DataLoader.py  HDF5_to_NII.py  Repository.py  Source.py  StepDataLoader.py  StepManifestRepository.py
src/clearbrain/adapters/configs/: base.yaml
src/clearbrain/adapters/download/: json.py
src/clearbrain/adapters/load/: __init__.py  json.py
src/clearbrain/adapters/utils/: __init__.py  cell_json.py  formater.py  nii.py  tissue_hdf5.py
src/clearbrain/archive/: density.py  io.py  plot_data.py  save_json.py
src/clearbrain/archive/centerline/: __init__.py  centerline.py  plot_centerline.py  save.py
src/clearbrain/archive/plots_mod/: threeD_plot.py
src/clearbrain/archive/preprocess/: __init__.py  filter.py  geometry.py
src/clearbrain/centerline/: __init__.py  centerline.py  plot_centerline.py  save.py
src/clearbrain/data/: DataType.py  LoadTissue.py  Metadata.py  TissueDownloader.py  TissueLoader.py  TissueSource.py  __init__.py  loader.py  tissue_loader.py
src/clearbrain/meta/: Metadata.py  __init__.py  load_metadata.py
src/clearbrain/plots/: PlotSettings.py  __init__.py  plot_imshow_grid.py
src/clearbrain/preprocess/: geometry.py
src/clearbrain/processing/: __init__.py  centerline.py  crop.py  downsample.py  noise.py  rotate.py  scale.py  stretch.py  untwist.py
src/clearbrain/registration/: QuickRegistrator.py  RegistrationResult.py  Registrator.py  __init__.py
src/clearbrain/save/: SaveSettings.py  __init__.py
src/clearbrain/sections/: __init__.py  pca.py  plot_sections.py  sections.py  symmetry.py  symmetry_2.py
src/clearbrain/service/: ClearTissueProject.py  PipelineRunner.py  PipelineSpecs.py  StepSignatureBuilder.py
src/clearbrain/tissue/: ClearTissue.py  ClearVolume.py  SpinalCenterline.py  TissueType.py  __init__.py
src/cleartissue/adapters/: DataConverter.py  HDF5_to_Ply.py  PipelineConfigRepository.py  RawDataLoader.py  Repository.py  __init__.py
tests/data/downloader/: test_json_downloader.py
(+113 files in other folders)
