[project]
name = "clearbrain"
version = "0.1.0"
description = "Everything that is needed to analyse clear brain data"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "marimo (>=0.23.1,<0.24.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "simpleitk (>=2.5.4,<3.0.0)",
    "nibabel (>=5.4.2,<6.0.0)",
    "brainglobe-atlasapi (>=2.3.1,<3.0.0)",
    "coverage (>=7.14.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)"
]

[tool.poetry]
packages = [{include = "clearbrain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
